feat(simd): enable vector api and add x86 simd detector